add payment_uri and payment_uri_qrcode to invoice maker
